remote/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sse-ingress
  namespace: sse-project
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sse-ingress
  namespace: sse-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /sse-project/pingus
            pathType: Prefix
            backend:
              service:
                name: pingus
                port:
                  number: 8080
    - http:
        paths:
          - path: /sse-project/validator
            pathType: Prefix
            backend:
              service:
                name: validator
                port:
                  number: 8080
